example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-2.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"_.\")"
---
Ok(
    Language {
        v: None,
        _s: (),
        t: None,
        _d: Some(
            (),
        ),
    },
)
