example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-4.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"1_.\")"
---
Ok(
    Language {
        v: Some(
            1,
        ),
        _s: (),
        t: None,
        _d: Some(
            (),
        ),
    },
)
