example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-5.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"1_2\")"
---
Ok(
    Language {
        v: Some(
            1,
        ),
        _s: (),
        t: Spanned {
            value: Some(
                Number {
                    v: 2,
                },
            ),
            span: (
                2,
                3,
            ),
        },
        _d: None,
    },
)
