example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-6.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"1_2.\")"
---
Ok(
    Language {
        v: Some(
            1,
        ),
        _s: (),
        t: Some(
            Number {
                v: 2,
            },
        ),
        _d: Some(
            (),
        ),
    },
)
