example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-7.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"_2\")"
---
Ok(
    Language {
        v: None,
        _s: (),
        t: Some(
            Number {
                v: 2,
            },
        ),
        _d: None,
    },
)
